[gd_scene load_steps=70 format=3 uid="uid://dtrh5oty86xdt"]

[ext_resource type="PackedScene" path="res://framework/node_modules/main_camera/MainCamera.tscn" id="1"]
[ext_resource type="Script" path="res://game/level.gd" id="2"]
[ext_resource type="PackedScene" path="res://framework/ui/menus/pause_menu/PauseMenu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://framework/ui/menus/game_over/GameOverMenu.tscn" id="4"]
[ext_resource type="TileSet" path="res://framework/resources/environment/walls_tileset.tres" id="5"]
[ext_resource type="PackedScene" path="res://game/Player.tscn" id="6"]
[ext_resource type="FontFile" uid="uid://blmusqtv86d1k" path="res://framework/resources/fonts/m3x6/m3x6.ttf" id="7"]
[ext_resource type="Texture2D" uid="uid://bvx5oycysa778" path="res://framework/resources/shapes/16/square_16.png" id="8"]
[ext_resource type="PackedScene" path="res://game/Log.tscn" id="9"]
[ext_resource type="Script" path="res://game/log_spawner.gd" id="10"]
[ext_resource type="PackedScene" path="res://framework/node_modules/basic_spawner/BasicSpawner.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://cylbomtfl6tsg" path="res://game/bg.png" id="12"]
[ext_resource type="Script" path="res://game/Bg.gd" id="13"]
[ext_resource type="PackedScene" path="res://framework/ui/modules/cursor/Cursor.tscn" id="14"]
[ext_resource type="PackedScene" path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" id="15"]
[ext_resource type="PackedScene" path="res://game/Bomb.tscn" id="16"]
[ext_resource type="Script" path="res://game/bombs.gd" id="17"]
[ext_resource type="PackedScene" path="res://framework/ui/modules/bouncing_label/BouncingLabel.tscn" id="18"]
[ext_resource type="Script" path="res://game/grenades.gd" id="19"]
[ext_resource type="PackedScene" path="res://game/Grenade.tscn" id="20"]
[ext_resource type="PackedScene" path="res://game/Laser.tscn" id="21"]
[ext_resource type="PackedScene" path="res://game/Shooter.tscn" id="22"]
[ext_resource type="Script" path="res://game/shooters.gd" id="23"]
[ext_resource type="Script" path="res://game/spliting_grenades.gd" id="24"]
[ext_resource type="PackedScene" path="res://game/SplittingGrenade.tscn" id="25"]
[ext_resource type="PackedScene" path="res://game/TripleLaser.tscn" id="26"]
[ext_resource type="PackedScene" path="res://game/SmashBall.tscn" id="27"]
[ext_resource type="Script" path="res://game/smash_balls.gd" id="28"]
[ext_resource type="PackedScene" path="res://framework/node_modules/drop_shadow/DropShadow.tscn" id="29"]
[ext_resource type="AudioStream" uid="uid://dakwfe0ihaoqo" path="res://game/hiscore_02.wav" id="30"]
[ext_resource type="AudioStream" uid="uid://cwuba2fcfwsis" path="res://game/hiscore_01.wav" id="31"]
[ext_resource type="AudioStream" uid="uid://bdlrpd2rsmmtl" path="res://game/hiscore_03.wav" id="32"]
[ext_resource type="AudioStream" uid="uid://c6ywkp78j27fo" path="res://game/hiscore_bi_02.wav" id="33"]
[ext_resource type="AudioStream" uid="uid://ccq5svkp8phdd" path="res://game/hiscore_bi_01.wav" id="34"]
[ext_resource type="AudioStream" uid="uid://dtserqvc13aqw" path="res://game/powerup_01.wav" id="35"]
[ext_resource type="AudioStream" uid="uid://cm04pagt31mxn" path="res://game/powerup_02.wav" id="36"]
[ext_resource type="AudioStream" uid="uid://c7fc8eq0cn5ui" path="res://game/powerup_03.wav" id="37"]
[ext_resource type="AudioStream" uid="uid://d4hj7pe6qwajj" path="res://game/powerup_05.wav" id="38"]
[ext_resource type="AudioStream" uid="uid://1c0hv83ux4c5" path="res://game/powerup_04.wav" id="39"]
[ext_resource type="AudioStream" uid="uid://du88swxggtdnw" path="res://game/powerup_06.wav" id="40"]
[ext_resource type="Texture2D" uid="uid://c60x3el5nweip" path="res://game/tutorial.png" id="41"]
[ext_resource type="Script" path="res://game/w.gd" id="42"]
[ext_resource type="Texture2D" uid="uid://bg2hkdeldkloi" path="res://game/w_button.png" id="43"]
[ext_resource type="Script" path="res://game/D.gd" id="44"]
[ext_resource type="Script" path="res://game/A.gd" id="45"]
[ext_resource type="Script" path="res://game/S.gd" id="46"]
[ext_resource type="Script" path="res://game/Space.gd" id="47"]
[ext_resource type="Texture2D" uid="uid://c8lxkrxef55wx" path="res://game/a_button.png" id="48"]
[ext_resource type="Texture2D" uid="uid://cha7crropk56s" path="res://game/s_button.png" id="49"]
[ext_resource type="Texture2D" uid="uid://dygtn5t5loaok" path="res://game/d_button.png" id="50"]
[ext_resource type="Texture2D" uid="uid://lixdvx5c0lv1" path="res://game/space_button.png" id="51"]
[ext_resource type="AudioStream" uid="uid://0difd4kxfdg1" path="res://game/press_01.wav" id="52"]
[ext_resource type="AudioStream" uid="uid://bvffxif33hgff" path="res://game/press_02.wav" id="53"]
[ext_resource type="AudioStream" uid="uid://d3qum3ybvcyo4" path="res://game/press_03.wav" id="54"]
[ext_resource type="AudioStream" uid="uid://dej8qgdqgvhln" path="res://game/release_01.wav" id="55"]
[ext_resource type="AudioStream" uid="uid://bvc8reu4q54wq" path="res://game/release_02.wav" id="56"]
[ext_resource type="Texture2D" uid="uid://dtlp2nkcvubi2" path="res://game/indicator.png" id="57"]
[ext_resource type="AudioStream" uid="uid://xbxj3f7lsyyx" path="res://game/indicator_01.wav" id="58"]
[ext_resource type="AudioStream" uid="uid://dyx6bvl3hieoq" path="res://game/indicator_02.wav" id="59"]
[ext_resource type="AudioStream" uid="uid://bx44815gqod54" path="res://game/indicator_03.wav" id="60"]
[ext_resource type="FontFile" path="res://framework/resources/fonts/m3x6/pixel_32.tres" id="61"]
[ext_resource type="Script" path="res://game/score_node.gd" id="62"]
[ext_resource type="Texture2D" uid="uid://dgdy1768mrsg4" path="res://framework/ui/menus/splash_screen/up.png" id="63"]
[ext_resource type="Texture2D" uid="uid://b0fqxpmwutcfo" path="res://framework/ui/menus/splash_screen/left.png" id="64"]
[ext_resource type="Texture2D" uid="uid://srwbc5vll5l5" path="res://game/down.png" id="65"]
[ext_resource type="Texture2D" uid="uid://nx6puuo3lkj8" path="res://game/right.png" id="66"]
[ext_resource type="Script" path="res://game/Tutorial.gd" id="67"]
[ext_resource type="Texture2D" uid="uid://crsxas4rqbkbb" path="res://game/z_button.png" id="68"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("7")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Level" type="Node2D"]
script = ExtResource("2")
PauseMenu = ExtResource("3")
GameOverMenu = ExtResource("4")

[node name="Bg" type="Node2D" parent="."]
z_index = -13
position = Vector2(-9, -8)
script = ExtResource("13")
max_angle = 4.0
move_multiplier = 0.15
follow_friction = 7.0

[node name="TextureRect" type="TextureRect" parent="Bg"]
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("12")
stretch_mode = 2

[node name="MainCamera" parent="." instance=ExtResource("1")]
visible = false
background_clear_color = Color(0.247059, 0.156863, 0.196078, 1)
noise_rate = 1000.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("5")
format = 2

[node name="Floor" type="Node2D" parent="."]
z_index = -10

[node name="DropShadow" parent="Floor" instance=ExtResource("29")]
scale = Vector2(14, 10)
target = NodePath("../Sprite2D")
shadow_offset = Vector2(2, 2)
copy_rotation = false

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
modulate = Color(0.0941176, 0.0784314, 0.145098, 1)
scale = Vector2(14, 10)
texture = ExtResource("8")

[node name="Tutorial" type="Node2D" parent="."]
z_index = -10
script = ExtResource("67")
trans_time = 0.15

[node name="Sprite2D" type="Sprite2D" parent="Tutorial"]
texture = ExtResource("41")

[node name="W" type="Sprite2D" parent="Tutorial"]
position = Vector2(-53, -4)
texture = ExtResource("43")
hframes = 2
script = ExtResource("42")

[node name="Key" type="Sprite2D" parent="Tutorial/W"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("63")
hframes = 2

[node name="A" type="Sprite2D" parent="Tutorial"]
position = Vector2(-69, 13)
texture = ExtResource("48")
hframes = 2
script = ExtResource("45")

[node name="Key" type="Sprite2D" parent="Tutorial/A"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("64")
hframes = 2

[node name="S" type="Sprite2D" parent="Tutorial"]
position = Vector2(-52, 13)
texture = ExtResource("49")
hframes = 2
script = ExtResource("46")

[node name="Key" type="Sprite2D" parent="Tutorial/S"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("65")
hframes = 2

[node name="D" type="Sprite2D" parent="Tutorial"]
position = Vector2(-35, 13)
texture = ExtResource("50")
hframes = 2
script = ExtResource("44")

[node name="Key" type="Sprite2D" parent="Tutorial/D"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("66")
hframes = 2

[node name="Space" type="Sprite2D" parent="Tutorial"]
position = Vector2(53, 12)
texture = ExtResource("51")
hframes = 2
script = ExtResource("47")

[node name="Key" type="Sprite2D" parent="Tutorial/Space"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("68")
hframes = 2

[node name="PressSound" parent="Tutorial" instance=ExtResource("15")]

[node name="RandomAudioPlayer" parent="Tutorial/PressSound" index="0"]
volume_db = -24.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Tutorial/PressSound/RandomAudioPlayer" index="0"]
stream = ExtResource("52")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Tutorial/PressSound/RandomAudioPlayer" index="1"]
stream = ExtResource("53")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Tutorial/PressSound/RandomAudioPlayer" index="2"]
stream = ExtResource("54")

[node name="ReleaseSound" parent="Tutorial" instance=ExtResource("15")]

[node name="RandomAudioPlayer" parent="Tutorial/ReleaseSound" index="0"]
volume_db = -24.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Tutorial/ReleaseSound/RandomAudioPlayer" index="0"]
stream = ExtResource("55")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Tutorial/ReleaseSound/RandomAudioPlayer" index="1"]
stream = ExtResource("56")

[node name="Timer" type="Timer" parent="Tutorial"]
wait_time = 1.5
autostart = true

[node name="Tween" type="Tween" parent="Tutorial"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="Player" parent="." instance=ExtResource("6")]
position = Vector2(0, 40)
acceleration = 2400.0

[node name="LogSpawner" type="Node2D" parent="."]
script = ExtResource("10")
min_log_speed = 80.0
max_log_speed = 120.0
log_speed_step = 1.5
log_rotation_step = 0.2
orbs_for_bonus = 24

[node name="BasicSpawner" parent="LogSpawner" instance=ExtResource("11")]
plus_text = "+LOG"
object_spawning = ExtResource("9")
initial_delay = 2.0
timer_duration = 6.0
timer_randomizer = 0.25
min_duration = 1.75
dropoff = 0.018
finishing_orbs = -1

[node name="DropShadow" parent="LogSpawner" instance=ExtResource("29")]
visible = false
z_index = -7
target = NodePath("../IndicatorContainer/Indicator")
shadow_offset = Vector2(2, 2)
copy_scale = true

[node name="IndicatorContainer" type="Node2D" parent="LogSpawner"]
visible = false
position = Vector2(160, 10)
rotation = 1.5708

[node name="Indicator" type="Sprite2D" parent="LogSpawner/IndicatorContainer"]
self_modulate = Color(0.894118, 0.231373, 0.266667, 1)
texture = ExtResource("57")

[node name="IndicatorFlash" type="Sprite2D" parent="LogSpawner/IndicatorContainer/Indicator"]
z_index = 1
texture = ExtResource("57")

[node name="Tween" type="Tween" parent="LogSpawner"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="IndicatorSound" parent="LogSpawner" instance=ExtResource("15")]

[node name="RandomAudioPlayer" parent="LogSpawner/IndicatorSound" index="0"]
min_pitch = 0.7
max_pitch = 0.9

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LogSpawner/IndicatorSound/RandomAudioPlayer" index="0"]
stream = ExtResource("58")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="LogSpawner/IndicatorSound/RandomAudioPlayer" index="1"]
stream = ExtResource("59")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="LogSpawner/IndicatorSound/RandomAudioPlayer" index="2"]
stream = ExtResource("60")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0

[node name="ScoreLabel" parent="UI/MarginContainer" instance=ExtResource("18")]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.917647, 0.831373, 0.666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreNode" type="Node2D" parent="UI"]
position = Vector2(0, -92)
script = ExtResource("62")
bounce_duration = 0.15
bounce_height = 8.0

[node name="Label" type="Label" parent="UI/ScoreNode"]
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.917647, 0.831373, 0.666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.490196)
theme_override_fonts/font = ExtResource("61")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tween" type="Tween" parent="UI/ScoreNode"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="Cursor" parent="." instance=ExtResource("14")]

[node name="Sprite2D" parent="Cursor" index="0"]
visible = false
texture = null

[node name="DropShadow" parent="Cursor" index="1"]
visible = false

[node name="Bombs" type="Node2D" parent="."]
script = ExtResource("17")
min_tick_timer = 1.25
max_tick_timer = 3.25
tick_timer_step = 0.075
orbs_for_bonus = 29

[node name="BasicSpawner" parent="Bombs" instance=ExtResource("11")]
plus_text = "+BOMB"
object_spawning = ExtResource("16")
initial_delay = 8.0
timer_duration = 8.0
min_duration = 2.5
dropoff = 0.07
starting_orbs = 5
finishing_orbs = -1

[node name="Grenades" type="Node2D" parent="."]
script = ExtResource("19")
orbs_for_bonus = 39

[node name="BasicSpawner" parent="Grenades" instance=ExtResource("11")]
plus_text = "+GRENADE"
object_spawning = ExtResource("20")
initial_delay = 13.0
timer_duration = 9.0
min_duration = 2.75
dropoff = 0.05
starting_orbs = 10
finishing_orbs = 35

[node name="Lasers" type="Node2D" parent="."]

[node name="BasicSpawner" parent="Lasers" instance=ExtResource("11")]
plus_text = "+LASER"
object_spawning = ExtResource("21")
initial_delay = 20.0
timer_duration = 11.0
min_duration = 6.0
dropoff = 0.05
starting_orbs = 15
finishing_orbs = 35

[node name="Shooters" type="Node2D" parent="."]
script = ExtResource("23")
bullet_increase_step = 0.2
max_lock_duration = 0.4
lock_duration_step = 0.01
min_bullet_speed = 425.0
max_bullet_speed = 725.0
bullet_speed_step = 10.0
orbs_for_bonus = 49

[node name="BasicSpawner" parent="Shooters" instance=ExtResource("11")]
plus_text = "+SHOOTER"
object_spawning = ExtResource("22")
initial_delay = 30.0
timer_duration = 8.0
timer_randomizer = 0.25
min_duration = 2.8
dropoff = 0.05
starting_orbs = 20
finishing_orbs = -1

[node name="SplittingGrenades" type="Node2D" parent="."]
script = ExtResource("24")
orbs_for_bonus = 39

[node name="BasicSpawner" parent="SplittingGrenades" instance=ExtResource("11")]
plus_text = "+SPLITTER"
object_spawning = ExtResource("25")
initial_delay = 58.0
timer_duration = 11.0
timer_randomizer = 0.25
min_duration = 6.25
dropoff = 0.05
starting_orbs = 35
finishing_orbs = -1

[node name="TripleLasers" type="Node2D" parent="."]

[node name="BasicSpawner" parent="TripleLasers" instance=ExtResource("11")]
plus_text = "+3PL LASER"
object_spawning = ExtResource("26")
initial_delay = 70.0
timer_duration = 10.0
timer_randomizer = 0.25
min_duration = 6.0
dropoff = 0.05
starting_orbs = 45
finishing_orbs = -1

[node name="SmashBalls" type="Node2D" parent="."]
script = ExtResource("28")

[node name="BasicSpawner" parent="SmashBalls" instance=ExtResource("11")]
plus_text = "+XPLDR"
object_spawning = ExtResource("27")
initial_delay = 90.0
timer_duration = 10.0
min_duration = 6.0
dropoff = 0.05
starting_orbs = 55
finishing_orbs = -1

[node name="HiscoreSound" parent="." instance=ExtResource("15")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HiscoreSound/RandomAudioPlayer" index="0"]
stream = ExtResource("31")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="HiscoreSound/RandomAudioPlayer" index="1"]
stream = ExtResource("30")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="HiscoreSound/RandomAudioPlayer" index="2"]
stream = ExtResource("32")

[node name="HiscoreSound2" parent="." instance=ExtResource("15")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HiscoreSound2/RandomAudioPlayer" index="0"]
stream = ExtResource("34")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="HiscoreSound2/RandomAudioPlayer" index="1"]
stream = ExtResource("33")

[node name="FirstTimeSound" parent="." instance=ExtResource("15")]

[node name="RandomAudioPlayer" parent="FirstTimeSound" index="0"]
min_pitch = 0.75
max_pitch = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FirstTimeSound/RandomAudioPlayer" index="0"]
stream = ExtResource("39")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FirstTimeSound/RandomAudioPlayer" index="1"]
stream = ExtResource("38")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FirstTimeSound/RandomAudioPlayer" index="2"]
stream = ExtResource("40")

[node name="FirstTimeSound2" parent="." instance=ExtResource("15")]

[node name="RandomAudioPlayer" parent="FirstTimeSound2" index="0"]
min_pitch = 0.75
max_pitch = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FirstTimeSound2/RandomAudioPlayer" index="0"]
stream = ExtResource("35")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FirstTimeSound2/RandomAudioPlayer" index="1"]
stream = ExtResource("36")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FirstTimeSound2/RandomAudioPlayer" index="2"]
stream = ExtResource("37")

[node name="Tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="SoundTween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[connection signal="timeout" from="Tutorial/Timer" to="Tutorial" method="_on_Timer_timeout"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="picked_up" from="Player" to="." method="_on_Player_picked_up"]
[connection signal="spawned" from="LogSpawner/BasicSpawner" to="LogSpawner" method="_on_BasicSpawner_spawned"]
[connection signal="spawned" from="Bombs/BasicSpawner" to="Bombs" method="_on_BasicSpawner_spawned"]
[connection signal="spawned" from="Grenades/BasicSpawner" to="Grenades" method="_on_BasicSpawner_spawned"]
[connection signal="spawned" from="Shooters/BasicSpawner" to="Shooters" method="_on_BasicSpawner_spawned"]
[connection signal="spawned" from="SplittingGrenades/BasicSpawner" to="SplittingGrenades" method="_on_BasicSpawner_spawned"]
[connection signal="spawned" from="SmashBalls/BasicSpawner" to="SmashBalls" method="_on_BasicSpawner_spawned"]

[editable path="Tutorial/PressSound"]
[editable path="Tutorial/PressSound/RandomAudioPlayer"]
[editable path="Tutorial/ReleaseSound"]
[editable path="Tutorial/ReleaseSound/RandomAudioPlayer"]
[editable path="LogSpawner/IndicatorSound"]
[editable path="LogSpawner/IndicatorSound/RandomAudioPlayer"]
[editable path="Cursor"]
[editable path="HiscoreSound"]
[editable path="HiscoreSound/RandomAudioPlayer"]
[editable path="HiscoreSound2"]
[editable path="HiscoreSound2/RandomAudioPlayer"]
[editable path="FirstTimeSound"]
[editable path="FirstTimeSound/RandomAudioPlayer"]
[editable path="FirstTimeSound2"]
[editable path="FirstTimeSound2/RandomAudioPlayer"]
